# fetch

./: .gitattributes  .gitignore  .gitmodules  .taplo.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  MIGRATION.md  README.md  SECURITY.md  build.rs  go.mod  go.sum  grammars.toml  install.sh  main.go  main_test.go  version.go
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
automation/: Cargo.toml
automation/src/: main.rs
cmd/fetch/: main.go
cross/: Dockerfile
docs/: CONFIG.md  README.md  USAGE.md  advanced-features.md  agent-skill.md  authentication.md  cli-reference.md  configuration.md  ech-scoping.md  ech.md  getting-started.md  grpc.md  image-rendering.md  output-formatting.md  request-bodies.md  troubleshooting.md  updates.md  websocket.md
highlights/: html.scm  json.scm  toml.scm  xml.scm  yaml.scm
integration/: integration_test.go  pty_unix.go  pty_unix_test.go
internal/aws/: escape.go  sigv4.go  sigv4_test.go
internal/cli/: app.go  cli.go  cli_test.go  errors.go  flags.go
internal/client/: client.go  client_test.go  dns.go  tls.go  tls_test.go
internal/complete/: complete.go  complete_test.go  shells.go
internal/config/: config.go  config_test.go  file.go  file_test.go
internal/core/: content_type.go  core.go  errors.go  printer.go  printer_windows.go  term_size_unix.go  term_size_windows.go  term_unix.go  term_unix_bsd.go  term_unix_other.go  term_windows.go  vars.go
internal/curl/: curl.go  curl_test.go  helpers.go  long_flags.go  short_flags.go  tokenizer.go
internal/digest/: digest.go  digest_test.go
internal/dnsinspect/: dnsinspect.go  dnsinspect_test.go
internal/fetch/: aws_test.go  charset.go  charset_test.go  clipboard.go  clipboard_test.go  debug.go  edit.go  edit_test.go  fetch.go  format_response_test.go  grpc_reflection.go  grpc_reflection_test.go  http.go  output.go  output_test.go  print.go  print_test.go  progress.go  proto.go  proto_test.go  retry.go  retry_test.go  sniff.go  sniff_test.go  upload.go  upload_test.go  verbosity.go  waterfall.go  waterfall_test.go  websocket.go
internal/fileutil/: replace_test.go  replace_unix.go  replace_windows.go
internal/format/: contenttype.go  contenttype_test.go  css.go  css_test.go  csv.go  csv_test.go  format.go  grpc.go  grpc_test.go  html.go  html_test.go  json.go  json_test.go  markdown.go  markdown_test.go  msgpack.go  msgpack_test.go  ndjson.go  ndjson_test.go  protobuf.go  protobuf_test.go  registry.go  sse.go  sse_test.go  xml.go  xml_test.go  yaml.go  yaml_test.go
internal/grpc/: framing.go  framing_test.go  headers.go  status.go  status_test.go
internal/image/: adaptor.go  block.go  emulator.go  exif.go  image.go  inline.go  kitty.go  term_unix.go  term_windows.go
internal/multipart/: multipart.go  multipart_test.go
internal/printer/: printer.go
internal/progress/: progress.go  progress_test.go
internal/proto/: compile.go  compile_test.go  descriptor.go  descriptor_test.go  message.go  message_test.go  schema.go  schema_test.go
internal/resolver/: doh.go  rcode.go  resolver.go  resolver_test.go  udp.go
internal/session/: session.go  session_test.go
internal/tlsinspect/: tlsinspect.go  tlsinspect_test.go
internal/update/: progress.go  update.go  update_test.go  update_unix.go  update_unix_test.go  update_windows.go  update_windows_test.go
internal/vars/: vars.go
internal/ws/: editor.go  editor_test.go  interactive.go  interactive_test.go  read.go  terminal.go  terminal_test.go  terminal_unix.go  terminal_windows.go  write.go  ws.go  ws_test.go
skills/fetch/: SKILL.md
skills/fetch/evals/: evals.json
skills/fetch/references/: diagnostics.md  grpc.md  http.md  websocket.md
src/: app.rs  aws_sigv4.rs  body.rs  cli.rs  core.rs  duration.rs  editor.rs  error.rs  fetch.rs  fileutil.rs  flag_registry.rs  format.rs  har.rs  highlight.rs  http.rs  inspection.rs  lib.rs  main.rs  net.rs  progress.rs  session.rs  skill.rs  theme.rs  update.rs
src/auth/: aws_sigv4.rs  digest.rs  mod.rs
src/cli/: completion.rs  from_curl.rs
src/config/: mod.rs
src/dns/: custom.rs  doh.rs  inspect.rs  mod.rs  resolver.rs  svcb.rs  transport.rs  util.rs  wire.rs
src/dns/inspect/: rdata.rs  render.rs
src/dns/svcb/: system.rs
src/format/: article.rs  content_type.rs  css.rs  csv.rs  grpc.rs  html.rs  json.rs  markdown.rs  mod.rs  msgpack.rs  protobuf.rs  sse.rs  xml.rs  yaml.rs
src/grpc/: body.rs  encoding.rs  framing.rs  headers.rs  mod.rs  reflection.rs  status.rs
src/http/: client.rs  edit.rs  encoding.rs  http3_cache.rs  metadata.rs  mod.rs  multipart.rs  request.rs  response.rs  retry.rs  transport.rs
src/http/response/: formatters.rs  metadata.rs  stdout.rs  stream.rs
src/http/transport/: body.rs  client.rs  h3.rs  hyper_client.rs  mod.rs  proxy.rs  tests.rs
src/image/: block.rs  decode.rs  emulator.rs  external.rs  inline.rs  kitty.rs  mod.rs  orientation.rs  render.rs  terminal.rs
src/output/: clipboard.rs  mod.rs  pager.rs  progress.rs
src/proto/: convert.rs  descriptor_wire.rs  discovery.rs  json_stream.rs  mod.rs  schema.rs
src/themes/: default.toml
src/timing/: mod.rs
src/tls/: ech.rs  inspect.rs  mod.rs
src/tls/inspect/: cert.rs  der.rs  render.rs
src/update/: archive.rs  client.rs  install.rs  lock.rs  mod.rs  schedule.rs
src/websocket/: interactive.rs  mod.rs
tests/: cli.rs  formatting.rs  grpc.rs  har.rs  http.rs  install.rs  integration.rs  network.rs  terminal.rs  update.rs  websocket.rs
tests/support/: auth.rs  common.rs  dns.rs  grpc.rs  http.rs  http3.rs  mod.rs  proxy.rs  pty.rs  terminal.rs  tls.rs  update.rs  websocket.rs
themes/: default.toml
