[package]
name = "fetch"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"

[[bin]]
name = "fetch"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[dependencies]
anyhow = "1"
base64 = "0.22"
brotli = "8.0.2"
bytes = "1"
clap = { version = "4", features = ["derive"] }
cookie = "0.18"
cookie_store = "0.22"
encoding_rs = "0.8"
flate2 = "1"
futures-util = "0.3"
hmac = "0.13"
http = "1"
http-body-util = "0.1"
httpdate = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
libc = "0.2"
md-5 = "0.11"
mime = "0.3"
mimalloc = "0.1.52"
percent-encoding = "2"
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
prost-types = "0.14"
psl = "2"
rand = "0.10"
quick-xml = "0.40"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
reqwest = { version = "0.13", default-features = false, features = ["brotli", "cookies", "gzip", "http2", "http3", "json", "multipart", "rustls-no-provider", "socks", "stream", "system-proxy", "zstd"] }
rustls = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs", "tls12"] }
rustls-native-certs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision", "preserve_order"] }
sha2 = "0.11"
tar = "0.4"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower = "0.5"
url = "2"
webpki-roots = "1"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_IO", "Win32_System_Threading"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
zstd = "0.13"

[dev-dependencies]
assert_cmd = "2"
h3 = "0.0.8"
h3-quinn = "0.0.10"
h2 = "0.4"
predicates = "3"
rcgen = { version = "0.14", features = ["aws_lc_rs"] }
sha1 = "0.11"
tempfile = "3"
