[package]
name = "fetch"
version = "0.0.0"
edition = "2024"
rust-version = "1.97.1"

[[bin]]
name = "fetch"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[dependencies]
anyhow = "=1.0.104"
async-compression = { version = "=0.4.42", features = ["brotli", "gzip", "tokio", "zstd"] }
base64 = "=0.22.1"
brotli = "=8.0.4"
bytes = "=1.12.1"
clap = { version = "=4.6.3", features = ["derive"] }
cookie = "=0.18.1"
cookie_store = "=0.22.1"
encoding_rs = "=0.8.35"
flate2 = "=1.1.9"
futures-util = "=0.3.33"
h2 = "=0.4.15"
h3 = "=0.0.8"
h3-quinn = "=0.0.10"
hmac = "=0.13.0"
htmd = "=0.5.4"
http = "=1.4.2"
http-body = "=1.1.0"
http-body-util = "=0.1.4"
httpdate = "=1.0.3"
hyper = { version = "=1.11.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "=0.1.20", features = ["client-legacy", "client-proxy", "client-proxy-system", "http1", "http2", "tokio"] }
image = { version = "=0.25.10", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
ipnet = "=2.12.0"
legible = "=0.4.2"
md-5 = "=0.11.0"
memchr = "=2.8.3"
mime = "=0.3.17"
mimalloc = "=0.1.52"
percent-encoding = "=2.3.2"
prost = "=0.14.4"
prost-reflect = { version = "=0.16.5", features = ["serde"] }
prost-types = "=0.14.4"
psl = "=2.1.219"
rand = "=0.10.2"
quick-xml = "=0.41.0"
quinn = { version = "=0.11.11", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs"] }
rustls = { version = "=0.23.42", default-features = false, features = ["std", "aws-lc-rs", "prefer-post-quantum", "tls12"] }
rustls-native-certs = "=0.8.4"
rustls-platform-verifier = "=0.7.0"
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = { version = "=1.0.151", features = ["arbitrary_precision", "preserve_order"] }
sha2 = "=0.11.0"
shlex = "=2.0.1"
socket2 = { version = "=0.6.5", features = ["all"] }
tar = "=0.4.46"
thiserror = "=2.0.19"
time = "=0.3.51"
tokio = { version = "=1.53.1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "=0.26.4", default-features = false, features = ["aws-lc-rs"] }
tokio-tungstenite = { version = "=0.30.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = { version = "=0.7.19", features = ["io"] }
tower-service = "=0.3.3"
url = "=2.5.8"
webpki-roots = "=1.0.9"
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }
zstd = "=0.13.3"

[target.'cfg(unix)'.dependencies]
libc = "=0.2.188"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_NetworkManagement_Dns", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Console", "Win32_System_Diagnostics_ToolHelp", "Win32_System_IO", "Win32_System_JobObjects", "Win32_System_Pipes", "Win32_System_Threading"] }

[dev-dependencies]
assert_cmd = "=2.2.2"
predicates = "=3.1.4"
rcgen = { version = "=0.14.8", features = ["aws_lc_rs"] }
sha1 = "=0.11.0"
tempfile = "=3.27.0"
